hphp/test/slow/variadic_args/method_compat/bad_make_non_var.php.expectf
Fatal error: Declaration of MySQL::query() must be compatible with that of DB::query() in %s/variadic_args/method_compat/bad_make_non_var.php on line 7
